# firefly002

./: .gitignore  CMakeLists.txt  README.md  build.bat  run.bat
backend/: main.py  requirements.txt
resources/qss/: main.qss
src/: main.cpp
src/auth/: AuthManager.cpp  AuthManager.h  LoginDialog.cpp  LoginDialog.h
src/core/: Application.cpp  Application.h  Logger.cpp  Logger.h
src/network/: ZmqClient.cpp  ZmqClient.h
src/ui/: MainWindow.cpp  MainWindow.h
src/ui/ribbon/: RibbonBar.cpp  RibbonBar.h
src/ui/tasks/: TasksView.cpp  TasksView.h
